k8s/simple_deployment_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depweb
  labels:
    app: my-app
spec:
#  replicas: 3 - не нужна когда есть автоскейлинг
  selector:
    matchLabels:
      app: my-app-label
  template:
    metadata:
      labels:
        app: my-app-label
    spec:
      containers:
      - name: my-app-container
        image: adv4000/k8sphp:version2
        ports:
        - containerPort: 80
