k8s/simple_pods_v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
   env: prod
   app: main
   tier: frontend

spec:
  containers:
  - name: web-hello
    image: adv4000/k8sphp:latest
    ports:
     - containerPort: 80
